force-app/main/default/objects/Esthetician_Coolsculpting_s__c/Esthetician_Coolsculpting_s__c.object-meta.xml
<CustomObject>
    <label>Esthetician Coolsculpting Treatment</label>
    <nameField>
        <label>Esthetician Coolsculpting(s) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Esthetician Coolsculpting Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>