force-app/main/default/objects/Esthetician_Coolsculpting_s__c/fields/Applicator__c.field-meta.xml
<CustomField>
    <fullName>Applicator__c</fullName>
    <label>Applicator</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coolcurve</fullName>
            </value>
            <value>
                <fullName>CoolCore</fullName>
            </value>
            <value>
                <fullName>CoolFit</fullName>
            </value>
            <value>
                <fullName>CoolMax</fullName>
            </value>
            <value>
                <fullName>CoolSmooth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>