force-app/main/default/objects/Esthetician_Coolsculpting_s__c/fields/Esthetician_Coolsculpting__c.field-meta.xml
<CustomField>
    <fullName>Esthetician_Coolsculpting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Esthetician Coolsculpting</label>
    <referenceTo>Aesthetician_Coolsculpting__c</referenceTo>
    <relationshipName>Esthetician_Coolsculptings</relationshipName>
    <type>Lookup</type>
</CustomField>